# student-cli-tool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: package-on-release.yaml
src/student_cli_tool/: cli.py
